--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "Kuramoto_Model"
+name = "Kuramoto_model"
 version = "0.0.1"
 authors = [
   { name="Rishabh Bapat", email="rishabhbapat@gmail.com" },
