--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "Kuramoto_model"
+name = "kuramoto_model"
 version = "0.0.1"
 authors = [
   { name="Rishabh Bapat", email="rishabhbapat@gmail.com" },
@@ -19,5 +19,5 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = ""
-"Bug Tracker" = ""
+"Homepage" = "https://github.com/rishabhBapat/Kuramoto-Model"
+"Bug Tracker" = "https://github.com/rishabhBapat/Kuramoto-Model/issues"
